# mindmap

./: Cargo.toml  README.md  README_zh.md  mindmap_config.txt
assets/: MindElixir.js  index.css  mindmap.html  style.css
src/: main.rs
src/api/: ctrlc.rs  error.rs  mod.rs  parse_paras.rs  router.rs
src/api/handlers/: download.rs  fallback.rs  index.rs  mod.rs  previous.rs  update.rs
