[package]
name = "mindmap"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
panic = "abort"
strip = true

[dependencies]
argh = { version = "0.1.10" }
thiserror = { version = "1.0" }
axum = { version = "0.7.6" }
async-stream = { version = "0.3.6" }
tokio = { version = "1.34", features = ["full"] }
tracing = { version = "0.1.32" }
tracing-subscriber = { version = "0.3.9", features = ["env-filter", "local-time"] }
uuid = { version = "1.10.0", features = ["v4"] }
once_cell = { version = "1.19" }
ron = { version = "0.10.1" }
serde = { version = "1.0", features = ["derive"] }
